         gtkui.c}: add missing const qualifiers and casts (Stuart).
20150316 ui/xlib/xui.c: add casts to silence warnings (Stuart).
20150316 INSTALL: replace libspectrum's --without-glib with --with-fake-glib
         (Stuart).
20150316 ui/{gtk/debugger.c,widget/debugger.c,win32/debugger.{c,rc}}: show
         the status of the halted flag in the debugger (Stuart).
20150316 z80/{tests/tests.expected,z80.{c,h,pl},z80_checks.h,z80_ops.c}:
         accurate emulation of the HALT instruction (Stuart).
20150317 utils.c: use libspectrum's memory managment in utils_safe_strdup
         (Sergio).
20150317 sound/win32sound.c: don't free static buffers (Sergio).
20150317 compat/{unix/socket.c,win32/socket.c},debugger/{breakpoint.c,
         command.c,event.c,expression.c,variable.c},peripherals/{dck.c,
         disk/{beta.c,disciple.c,disk.c,opus.c,plusd.c},flash/am29f010.c,
         ide/ide.c,if1.c,if2.c,nic/{enc28j60.c,w5100.c}},pokefinder/pokemem.c,
         sound/{aosound.c,sdlsound.c},ui/{gtk/options.pl,scaler/scaler.c,
         win32/options.pl},uimedia.c: use libspectrum_free where appropriate
         (Sergio).
20150317 z80/z80.c: set AF, AF' and SP to 0xffff on reset (Stuart).
20150317 z80/z80.c: leave most registers unchanged on a soft reset (Stuart).
20150317 z80/z80.c: document emulation of interrupt modes (Stuart).
20150318 z80/z80.c: emulate interrupt and NMI timings more precisely (Stuart).
20150318 z80/z80.c: really emulate interrupt timings more precisely (Stuart).
20150318 z80/z80.c: really emulate NMI timings more precisely (Stuart).
20150318 z80/z80_ops.c: don't trap on breakpoints whilst halted (Stuart).
20150318 z80/z80.pl: refactor generation of LD r,r handling (Stuart).
20150318 settings.dat,ui/options.dat,z80/{coretest.c,z80.{c,h,pl},z80_checks.h,
         z80_macros.h,z80_ops.c: emulate NMOS and CMOS Z80 variants (Stuart).
20150318 man/fuse.1: document the CMOS Z80 option (Stuart).